# ems

./: .env.docker  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  seed_data copy.py  seed_data.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_core_schema.py  0002_create_auth_schema.py  0003_seed_superuser.py  0004_create_academic_schema.py  0005_create_exam_schema.py  0006_add_name_bn.py  3c27be385a0c_add_exam_boards_and_exam_registrations.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/features/: __init__.py
backend/app/features/academic/: __init__.py  enrollment_models.py  guardian_models.py  models.py  router.py  schemas.py
backend/app/features/academic/repositories/: __init__.py  base_repo.py  class_repo.py  class_subject_repo.py  enrollment_repo.py  guardian_repo.py  section_repo.py  student_repo.py  subject_repo.py
backend/app/features/auth/: models.py  router.py  schemas.py  security.py
backend/app/features/core/: __init__.py  geo_models.py  models.py  router.py  schemas.py  storage_router.py
backend/app/features/exam/: __init__.py  models.py  router.py  schemas.py
backend/app/features/reports/: router.py  schemas.py
backend/app/middleware/: tenant.py
backend/app/shared/: base_model.py  base_repo.py  exceptions.py  pagination.py  schemas.py
backend/app/storage/: interface.py  s3_storage.py
frontend/: .dockerignore  (+5 more)
(+128 files in other folders)
